	    Roland McGrath  <roland@hack.frob.com>

	* malloc/malloc (malloc_info): Also print mmapped statistics.

2014-05-30  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/m68k/arch-fork.h: New file.
	* sysdeps/unix/sysv/linux/m68k/nptl/fork.c: File removed.

2014-05-30  Ondřej Bílka  <neleai@seznam.cz>

	* malloc/malloc.c (malloc_info): Inline mi_arena.

2014-05-29  Richard Henderson  <rth@twiddle.net>

	* sysdeps/unix/sysv/linux/aarch64/sysdep.h (INTERNAL_VSYSCALL_NCS):
	Remove comma before expanding ASM_ARGS_##nr.
	(INTERNAL_SYSCALL_RAW): Make _sys_result signed, instead of casting.
	Make _x0 a strict output; make _x8 a strict input; adjust expansion
	of ASM_ARGS_##nr.
	(CLOBBER_ARGS_0, CLOBBER_ARGS_1, CLOBBER_ARGS_2): Remove.
	(CLOBBER_ARGS_3, CLOBBER_ARGS_4, CLOBBER_ARGS_5): Remove.
	(CLOBBER_ARGS_6, CLOBBER_ARGS_7): Remove.
	(ASM_ARGS_1): Add leading comma.

	* sysdeps/unix/sysv/linux/aarch64/sysdep.h [NOT_IN_libc]
	(SYSCALL_ERROR_HANDLER): Use tpidr_el0 instead of a call
	to __errno_location.
	* sysdeps/unix/sysv/linux/aarch64/nptl/localplt.data (libpthread.so):
	Remove the expected plt for __errno_location.

	* sysdeps/unix/sysv/linux/aarch64/nptl/sysdep-cancel.h
	[NOT_IN_libc] (SINGLE_THREAD_P): Use tpidr_el0 instead of a
	call to __read_tp.

	* sysdeps/unix/sysv/linux/aarch64/nptl/sysdep-cancel.h (PSEUDO):
	Always allocate 64 bytes of stack frame.  Use ldp/stp to create
	it and break it down.
	(DOCARGS_0, DOCARGS_1): Do nothing.
	(DOCARGS_2): Update to store into the new stack frame.
	(DOCARGS_3, DOCARGS_4, DOCARGS_5, DOCARGS_6): Likewise.
	(UNDOCARGS_1): Update to restore from the new stack frame.
	(UNDOCARGS_2, UNDOCARGS_3, UNDOCARGS_4): Likewise.
	(UNDOCARGS_5, UNDOCARGS_6): Likewise.

	* sysdeps/unix/sysv/linux/aarch64/nptl/sysdep-cancel.h
	(SINGLE_THREAD_P): New parameter for result regno.
	(PSEUDO): Update to match; use cbz instead of beq.

	* sysdeps/unix/sysv/linux/aarch64/nptl/sysdep-cancel.h (PSEUDO):